tests/tests/checks/snapshots/analysis/cpp/lambdas.cpp/check_glob@LambdaFields.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00015:52-58",
    "structured": 1,
    "pretty": "test::(anonymous)::(anonymous)",
    "sym": "F_<T_e92a3ec31a255159>_",
    "kind": "field",
    "parentsym": "T_e92a3ec31a255159"
  },
  {
    "loc": "00016:48-54",
    "structured": 1,
    "pretty": "test::(anonymous)::(anonymous)",
    "sym": "F_<T_4ee24ec31a255159>_",
    "kind": "field",
    "parentsym": "T_4ee24ec31a255159"
  },
  {
    "loc": "00017:42-48",
    "structured": 1,
    "pretty": "test::(anonymous)::(anonymous)",
    "sym": "F_<T_06bb4ec31a255159>_",
    "kind": "field",
    "parentsym": "T_06bb4ec31a255159"
  },
  {
    "loc": "00018:37-43",
    "structured": 1,
    "pretty": "test::(anonymous)::(anonymous)",
    "sym": "F_<T_6a745ec31a255159>_",
    "kind": "field",
    "parentsym": "T_6a745ec31a255159"
  },
  {
    "loc": "00019:44-50",
    "structured": 1,
    "pretty": "test::(anonymous)::(anonymous)",
    "sym": "F_<T_424d5ec31a255159>_",
    "kind": "field",
    "parentsym": "T_424d5ec31a255159"
  },
  {
    "loc": "00020:39-45",
    "structured": 1,
    "pretty": "test::(anonymous)::(anonymous)",
    "sym": "F_<T_12df2fc31a255159>_",
    "kind": "field",
    "parentsym": "T_12df2fc31a255159"
  }
]
